# rover

./: Cargo.toml
apps/client/: package.json  pnpm-lock.yaml  tsconfig.json
apps/client/src/: App.vue  main.ts  screensConfig.ts
apps/client/src-tauri/: Cargo.toml
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/src/: main.rs
apps/client/src/components/: WebSocketTest.vue  toolbarConfig.ts
apps/client/src/components/rover/window/: MainWindow.vue  StatusBar.vue
apps/client/src/components/rover/window/main_menu/: MenuBar.vue  WindowControls.vue  menuConfig.ts
apps/client/src/pages/: DispatchMain.vue  Login.vue  Settings.vue  home.vue
apps/client/src/router/: index.ts
apps/client/src/stores/: statusStore.ts
apps/server/: .env  Cargo.toml  docker-compose.yaml
apps/server/.sqlx/: query-2e4315280a7aa45d48b07d9d29548d35dcd5631fe1bedf2a6e646b2c6346048c.json  query-c285c0d52c579d87a49511705207f8e550d1859d708eed536a8799b988ec4ffa.json  query-c53f18e3c2dfb9e069be6a59ad77158b0c7b30466efb0cd8b4ad57f391a8751e.json  query-d5f0c876b936df1afa02e35a35acba4ebac6147cfe8be847b4468b7fd7044701.json
apps/server/migrations/: 20241123191723_initial_log_table.sql  20241124215457_initial_user_table.sql
apps/server/src/: auth.rs  db.rs  logging.rs  main.rs  users.rs
apps/server/tests/: integration_tests.rs
libs/shared-types/: Cargo.toml  tsconfig.json
libs/shared-types/src/: incident.rs  lib.rs
src_ol/: App.vue
src_ol/components/: LeftToolbar.vue  MainCanvas.vue  RightPanel.vue  TopFiltersBar.vue
src_ol/components/Palettes/: FiltersPanel.vue  ToolsPanel.vue  UnitStatusPanel.vue
src_ol/router/: index.ts
src_ol/views/: CallsView.vue  DashboardView.vue  UnitsView.vue
