[package]
name = "dog-house"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"]}
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
tower-http = "0.6.2"
shared-types = {path = "../../libs/shared-types"}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
time = "0.3.36"
hyper = "1.5.1"
dotenvy = {version = "*"}
dotenvy_macro = {version = "*"}
sqlx = {version = "0.8.2", features = ["postgres", "macros", "runtime-tokio", "time"]}
futures-util = "0.3.31"
