[package]
name = "dog-house"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"]}
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
tower-http = {version = "0.6.2", features = ["cors", "trace", "fs"]}
shared-types = {path = "../../libs/shared-types"}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
time = "0.3.36"
hyper = "1.5.1"
dotenvy = {version = "*"}
dotenvy_macro = {version = "*"}
sqlx = {version = "0.8.2", features = ["postgres", "macros", "runtime-tokio", "time"]}
futures-util = "0.3.31"
tokio-tungstenite = "0.24.0"
axum-extra = {version = "0.9.6", features = ["typed-header"]}
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
once_cell = "1.20.2"
reqwest = { version = "0.12", features = ["json"] }
axum-macros = "0.4.2"
