[package]
name = "tauriv2-vue-desktop-starter"
version = "0.3.0"
description = "A Tauri v2 Vue Desktop Starter"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [ "macos-private-api" ] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-window-state = "2.0.1"
serde = "1.0.128"
serde_json = "1.0.128"
tauri-plugin-store = "2.0.1"
shared-types = {path = "../../../libs/shared-types"}
futures-util = "0.3.31"
tokio = "1.41.1"
tokio-tungstenite = "0.24.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
reqwest = "0.12.9"
base64 = "0.22.1"
rand = "0.8.5"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

# https://tauri.app/concept/size/
[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
